v2/src/test/snapshots/shiba_preview__test__markdown__emphasis.snap
---
source: src/test/markdown.rs
expression: json
---
{
  "kind": "render_tree",
  "tree": [
    {
      "c": [
        {
          "c": [
            "emphasis"
          ],
          "t": "em"
        },
        " and ",
        {
          "c": [
            "strong"
          ],
          "t": "strong"
        },
        " text 1."
      ],
      "t": "p"
    },
    {
      "c": [
        {
          "c": [
            "emphasis"
          ],
          "t": "em"
        },
        " and ",
        {
          "c": [
            "strong"
          ],
          "t": "strong"
        },
        " text 2."
      ],
      "t": "p"
    }
  ]
}
