v2/src/test/snapshots/shiba_preview__test__markdown__html.snap
---
source: src/test/markdown.rs
expression: json
---
{
  "kind": "render_tree",
  "tree": [
    {
      "raw": "<div>\n    <img src=\"https://example.com/test.png\" width=\"100\" height=\"100\" alt=\"test\">\n</div>\n",
      "t": "html"
    },
    {
      "c": [
        "This is ",
        {
          "raw": "<span>inline</span>",
          "t": "html"
        },
        " HTML."
      ],
      "t": "p"
    }
  ]
}
