v2/src/test/snapshots/shiba_preview__test__markdown__list.snap
---
source: src/test/markdown.rs
expression: json
---
{
  "kind": "render_tree",
  "tree": [
    {
      "c": [
        {
          "c": [
            "a",
            {
              "c": [
                {
                  "c": [
                    "あ"
                  ],
                  "t": "li"
                },
                {
                  "c": [
                    "い"
                  ],
                  "t": "li"
                }
              ],
              "t": "ol"
            }
          ],
          "t": "li"
        },
        {
          "c": [
            "b"
          ],
          "t": "li"
        },
        {
          "c": [
            "c",
            {
              "c": [
                {
                  "c": [
                    "お"
                  ],
                  "t": "li"
                }
              ],
              "t": "ol"
            }
          ],
          "t": "li"
        }
      ],
      "t": "ol"
    },
    {
      "c": [
        {
          "c": [
            "aaa",
            {
              "c": [
                {
                  "c": [
                    "あ"
                  ],
                  "t": "li"
                },
                {
                  "c": [
                    "い"
                  ],
                  "t": "li"
                }
              ],
              "t": "ul"
            }
          ],
          "t": "li"
        },
        {
          "c": [
            "bbb"
          ],
          "t": "li"
        },
        {
          "c": [
            "ccc",
            {
              "c": [
                {
                  "c": [
                    "う"
                  ],
                  "t": "li"
                }
              ],
              "t": "ul"
            }
          ],
          "t": "li"
        }
      ],
      "t": "ul"
    },
    {
      "c": [
        {
          "c": [
            "aaa",
            {
              "c": [
                {
                  "c": [
                    "あ"
                  ],
                  "t": "li"
                },
                {
                  "c": [
                    "い"
                  ],
                  "t": "li"
                }
              ],
              "t": "ul"
            }
          ],
          "t": "li"
        },
        {
          "c": [
            "bbb"
          ],
          "t": "li"
        },
        {
          "c": [
            "ccc",
            {
              "c": [
                {
                  "c": [
                    "う"
                  ],
                  "t": "li"
                }
              ],
              "t": "ul"
            }
          ],
          "t": "li"
        }
      ],
      "t": "ul"
    },
    {
      "c": [
        {
          "c": [
            "aaa",
            {
              "c": [
                {
                  "c": [
                    "あ"
                  ],
                  "t": "li"
                },
                {
                  "c": [
                    "い"
                  ],
                  "t": "li"
                }
              ],
              "t": "ul"
            }
          ],
          "t": "li"
        },
        {
          "c": [
            "bbb"
          ],
          "t": "li"
        },
        {
          "c": [
            "ccc",
            {
              "c": [
                {
                  "c": [
                    "う"
                  ],
                  "t": "li"
                }
              ],
              "t": "ul"
            }
          ],
          "t": "li"
        }
      ],
      "t": "ol"
    }
  ]
}
