v2/src/test/snapshots/shiba_preview__test__markdown__sanitized.snap
---
source: src/test/markdown.rs
expression: json
---
{
  "kind": "render_tree",
  "tree": [
    {
      "raw": "\n\n<div>hello</div>\n",
      "t": "html"
    }
  ]
}
