v2/src/test/snapshots/shiba_preview__test__markdown__strikethrough.snap
---
source: src/test/markdown.rs
expression: json
---
{
  "kind": "render_tree",
  "tree": [
    {
      "c": [
        "this ",
        {
          "c": [
            "text is declined"
          ],
          "t": "del"
        },
        " is test"
      ],
      "t": "p"
    }
  ]
}
